--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		</nav>
 	</header>
 
-	<div id="leftDiv" class="shadowStyle">
-		<article id="week1">
+	<div id="leftDiv">
+		<article id="week1"  class="shadowStyle">
 			<header>Week 1 at NSS</header>
 			<section>
 				Lorem ipsum dolor sit amet, id aenean phasellus sed cursus mauris, quam perferendis justo. Eget augue tempor lacus integer odio id, rhoncus donec at, non eum justo donec nonummy nunc vitae, euismod massa proin vehicula volutpat nunc. Tempor ornare, elementum faucibus, adipiscing lorem ut augue aenean nullam arcu, dolor wisi sollicitudin class id sed. Proin platea aptent ultricies sapien vestibulum, morbi ut dolor dui sed vivamus lectus. Sed dolor penatibus elit enim egestas, nec congue lectus massa.
@@ -31,7 +31,7 @@
 
 		</article>
 
-		<article id="week2">
+		<article id="week2"  class="shadowStyle">
 			<header>Week 2 at NSS</header>
 			<section>
 				Lorem ipsum dolor sit amet, id aenean phasellus sed cursus mauris, quam perferendis justo. Eget augue tempor lacus integer odio id, rhoncus donec at, non eum justo donec nonummy nunc vitae, euismod massa proin vehicula volutpat nunc. Tempor ornare, elementum faucibus, adipiscing lorem ut augue aenean nullam arcu, dolor wisi sollicitudin class id sed. Proin platea aptent ultricies sapien vestibulum, morbi ut dolor dui sed vivamus lectus. Sed dolor penatibus elit enim egestas, nec congue lectus massa.
@@ -44,8 +44,15 @@
 		</article>
 	</div>
 
-	<div id="rightDiv" class="shadowStyle">
-		<
+	<div id="rightDiv">
+		
+		<ul>		
+			<li><a href="#">Understand HTML</li>
+			<li><a href="#">Understand CSS</li>
+			<li><a href="#">Understand Javascript</li>
+			<li><a href="#">Understand Node</li>
+		</ul>
+
 	</div>
 
 	<footer class="shadowStyle" id="mainFooter">Arwa Kuterwadliwala &copy; 2017</footer>
