major css changes inclluding the background color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Arwa's Weekly Blog</title>
 	<link href="https://fonts.googleapis.com/css?family=Jim+Nightshade" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
 		<img src="images/profile.jpg" class="shadowStyle">
 		<nav class="shadowStyle" id="mainNav">
 			<ul>
-				<li><a href="">Weekly Blog </a></li>
+				<li><a href="index.html">Weekly Blog </a></li>
 				<li><a href="">Arwa, who? </a></li>
 				<li><a href="">Contact Arwa </a></li>
 			</ul>
@@ -19,8 +20,10 @@
 	</header>
 
 	<div id="leftDiv">
-		<article id="week1"  class="shadowStyle">
-			<header>Week 1 at NSS</header>
+		<article class="shadowStyle weeklyArticles">
+			<header>
+				<h1 class="shadowStyle">Week 1 at NSS</h1>
+			</header>
 			<section>
 				Lorem ipsum dolor sit amet, id aenean phasellus sed cursus mauris, quam perferendis justo. Eget augue tempor lacus integer odio id, rhoncus donec at, non eum justo donec nonummy nunc vitae, euismod massa proin vehicula volutpat nunc. Tempor ornare, elementum faucibus, adipiscing lorem ut augue aenean nullam arcu, dolor wisi sollicitudin class id sed. Proin platea aptent ultricies sapien vestibulum, morbi ut dolor dui sed vivamus lectus. Sed dolor penatibus elit enim egestas, nec congue lectus massa.
 			</section>
@@ -31,8 +34,24 @@
 
 		</article>
 
-		<article id="week2"  class="shadowStyle">
-			<header>Week 2 at NSS</header>
+		<article class="shadowStyle weeklyArticles">
+			<header>
+					<h1 class="shadowStyle">Week 2 at NSS</h1>
+			</header>
+			<section>
+				Lorem ipsum dolor sit amet, id aenean phasellus sed cursus mauris, quam perferendis justo. Eget augue tempor lacus integer odio id, rhoncus donec at, non eum justo donec nonummy nunc vitae, euismod massa proin vehicula volutpat nunc. Tempor ornare, elementum faucibus, adipiscing lorem ut augue aenean nullam arcu, dolor wisi sollicitudin class id sed. Proin platea aptent ultricies sapien vestibulum, morbi ut dolor dui sed vivamus lectus. Sed dolor penatibus elit enim egestas, nec congue lectus massa.
+			</section>
+			<footer>
+				<date>06/02/17</date>
+				<p>Arwa</p>
+			</footer>
+
+		</article>
+
+		<article class="shadowStyle weeklyArticles">
+			<header>
+					<h1 class="shadowStyle">Week 2 at NSS</h1>
+			</header>
 			<section>
 				Lorem ipsum dolor sit amet, id aenean phasellus sed cursus mauris, quam perferendis justo. Eget augue tempor lacus integer odio id, rhoncus donec at, non eum justo donec nonummy nunc vitae, euismod massa proin vehicula volutpat nunc. Tempor ornare, elementum faucibus, adipiscing lorem ut augue aenean nullam arcu, dolor wisi sollicitudin class id sed. Proin platea aptent ultricies sapien vestibulum, morbi ut dolor dui sed vivamus lectus. Sed dolor penatibus elit enim egestas, nec congue lectus massa.
 			</section>
@@ -44,13 +63,13 @@
 		</article>
 	</div>
 
-	<div id="rightDiv">
-		
+	<div id="rightDiv" class="shadowStyle">
+		<h1 class="shadowStyle">Know me more</h1>
 		<ul>		
-			<li><a href="#">Understand HTML</li>
-			<li><a href="#">Understand CSS</li>
-			<li><a href="#">Understand Javascript</li>
-			<li><a href="#">Understand Node</li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
+			<li><a href="#"></a></li>
 		</ul>
 
 	</div>
